// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileUpload> Should output a child button element 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      multiple=""
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  />
</DocumentFragment>
`;

exports[`<FileUpload> Should output a child input element 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      multiple=""
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  />
</DocumentFragment>
`;

exports[`<FileUpload> should have li named 'test.txt' and not 'hello.txt', upon removeFile 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      multiple=""
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  >
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        test.txt
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        hello.txt
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      />
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        item
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
  </ul>
</DocumentFragment>
`;

exports[`<FileUpload> should render a ul with list items, upon uploading 1`] = `
<DocumentFragment>
  <div>
    <input
      class="d-none form-control"
      id="test123"
      multiple=""
      type="file"
    />
    <button
      class="btn btn-primary sgds"
      type="button"
    >
      FileUpload
    </button>
  </div>
  <ul
    class="fileupload-list sgds"
  >
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        test.txt
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        hello.txt
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      />
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
    <li
      class="fileupload-list-item"
    >
      <i
        class="bi bi-check me-2 check-icon"
      />
      <span
        class="filename"
      >
        item
      </span>
      <i
        class="bi bi-x-circle ms-2 x-circle-icon"
      />
    </li>
  </ul>
</DocumentFragment>
`;
